<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application et activités -->
    <string name="app_name">CovoiturageExpress</string>
    <string name="title_activity_connexion">Connexion</string>
    <string name="title_activity_creation_compte">Création d\'un compte</string>
    <string name="title_activity_creation_parcours">Ajout d\'un parcours</string>
    <string name="title_activity_modification_parcours">Modification d\'un parcours</string>
    <string name="title_activity_parcours_detail">Détails du parcours</string>
    <string name="title_activity_trouver_passagers">Trouver des passagers</string>
    <string name="title_activity_trouver_conducteur">Trouver un conducteur</string>
    <string name="title_activity_profil_utilisateur_owner">Mon profil</string>
    <string name="title_activity_profil_utilisateur">Profil de</string>
    <string name="title_activity_modifier_compte">Éditer mon profil</string>
    <string name="hello_world">Hello world!</string>

    <!-- Connexion et création de compte -->
    <string name="lbl_courriel">Courriel</string>
    <string name="lbl_confirmer_le_courriel">Confirmer le courriel</string>
    <string name="lbl_mot_de_passe">Mot de passe</string>
    <string name="lbl_confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="lbl_connexion">Connexion</string>
    <string name="lbl_creer_un_compte">Créer un compte</string>
    <string name="lbl_mot_de_passe_oublie">Mot de passe oublié</string>
    <string name="lbl_no_de_telephone">Numéro de téléphone</string>
    <string name="lbl_nom">Nom</string>
    <string name="lbl_prenom">Prénom</string>
    <string name="lbl_creer_le_compte">Créer le compte</string>

    <!-- Création d'un parcours -->
    <string name="lbl_conducteur">Conducteur</string>
    <string name="lbl_passager">Passager</string>
    <string name="lbl_adresse_depart">Adresse de départ</string>
    <string name="lbl_adresse_destination">Adresse de destination</string>
    <string name="lbl_distance_supp">Distance supplémentaire tolérée</string>
    <string name="lbl_nb_places_disponibles">Nombre de places disponibles</string>
    <string name="lbl_nb_places_demandees">Nombre de places demandées</string>
    <string name="lbl_date_depart">Date de départ</string>
    <string name="lbl_heure_depart">Heure de départ</string>
    <string name="lbl_repeter">Répéter</string>
    <string name="lbl_notes">Notes</string>
    <string name="lbl_rep_dimanche">D</string>
    <string name="lbl_rep_lundi">L</string>
    <string name="lbl_rep_mardi">M</string>
    <string name="lbl_rep_mercredi">M</string>
    <string name="lbl_rep_jeudi">J</string>
    <string name="lbl_rep_vendredi">V</string>
    <string name="lbl_rep_samedi">S</string>

    <!-- Liste des parcours -->
    <string name="parcours_item_place_disponible">place disponible</string>
    <string name="parcours_item_places_disponibles">places disponibles</string>
    <string name="parcours_item_demande">Demande</string>
    <string name="parcours_item_place">place</string>
    <string name="parcours_item_places">places</string>
    <string name="parcours_fragment_titre_parcours">Parcours</string>
    <string name="parcours_fragment_titre_participants">Participants</string>
    <string name="parcours_fragment_titre_carte">Carte</string>
    
    <!-- Ajout d'un commentaire -->
    <string name="lbl_commentaire">Votre commentaire &#8230;</string>

    <!-- Alertes et messages d'erreurs -->
    <string name="txt_courriel_different">Le courriel doit être identique</string>
    <string name="txt_courriel_invalide">Le courriel doit être valide</string>
    <string name="txt_mot_de_passe_different">Le mot de passe doit être identique</string>
    <string name="txt_tous_les_champs">Tous les champs doivent être remplis</string>
    <string name="txt_utilisateur_cree">Utilisateur créé avec succès</string>
    <string name="txt_utilisateur_erreur_creation">Erreur réseau lors de la création de l\'utilisateur</string>
    <string name="txt_utilisateur_erreur_modification">Erreur réseau lors de la modification de l\'utilisateur</string>
    <string name="txt_erreur_connexion">Erreur lors de la connexion</string>
    <string name="txt_adresse_depart_invalide">Une adresse de départ doit être fournie</string>
    <string name="txt_adresse_destination_invalide">Une adresse de destination doit être fournie</string>
    <string name="txt_nb_places_invalide">Un nombre de place doit être fourni</string>
    <string name="txt_distance_supp_invalide">Une distance supplémentaire à parcourir doit être fournie</string>
    <string name="txt_date_heure_invalide">La date fournie est antérieure à la date actuelle</string>
    <string name="txt_parcours_cree">Parcours créé avec succès</string>
    <string name="txt_parcours_modifie">Parcours modifié avec succès</string>
    <string name="txt_parcours_erreur_creation">Erreur lors de la création du parcours. Une nouvelle tentative sera faite au prochain démarrage de l\'application</string>
    <string name="txt_parcours_erreur_creation_locale">Erreur de création locale du parcours. Vérifiez les champs et réessayez.</string>
    <string name="txt_parcours_erreur_suppression">Erreur lors de la suppression du parcours</string>
    <string name="txt_parcours_erreur_modification">Erreur lors de la modification du parcours</string>
    <string name="txt_parcours_erreur_modification_locale">Erreur lors de la modification locale du parcours. Vérifiez les champs et réessayez.</string>
    <string name="txt_ajout_participant_erreur">Erreur lors de l\'ajout du participant</string>
    <string name="txt_ajout_participant_succes">Participant ajouté avec succès</string>
    <string name="txt_chargement_des_parcours">Chargement des parcours&#8230;</string>
    <string name="txt_synchronisation_des_parcours">Parcours synchronisés avec succès</string>
    <string name="txt_erreur_synchronisation_des_parcours">Erreur lors de la synchronisation des parcours. Une nouvelle tentative sera faite au prochain démarrage de l\'application</string>
    <string name="txt_erreur_geocoder">La conversion des adresses en points géographiques a échoué. Vérfiez la connexion Internet et effectuez une modification pour les générer à nouveau.</string>

    <!-- Items de menu et d'action bar -->
    <string name="action_deconnexion">Déconnexion</string>
    <string name="action_mon_profil">Mon profil</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_ajouter_personne">Ajouter une personne</string>
    <string name="action_ajouter_parcours">Ajouter un parcours</string>
    <string name="action_editer_profil">Éditer mon profil</string>
    <string name="action_ajouter_commentaire">Écrire un commentaire</string>
    <string name="action_modifier_commentaire">Modifier le commentaire</string>
    <string name="action_confirmer_modification">Confirmer modification</string>

    <!-- Description des images -->
    <string name="desc_bouton_ajouter">Bouton ajouter</string>
    <string name="desc_bouton_modifier">Bouton modifier</string>
    <string name="desc_bouton_supprimer">Bouton supprimer</string>
    <string name="desc_bouton_annuler">Bouton annuler</string>
    <string name="desc_image_google_map">Carte montrant le départ et la destination</string>
    <string name="desc_bouton_upvote">Bouton de vote positif</string>
    <string name="desc_bouton_downvote">Bouton de vote négatif</string>
    <string name="desc_bouton_commentaire">Envoyer le commentaire</string>
    
    <!-- Avertissements de liste vide -->
    <string name="liste_vide_parcours">Aucuns parcours à afficher</string>
    <string name="liste_vide_commentaires">Aucuns commentaires à afficher</string>
    <string name="liste_vide_participants">Aucuns participants à afficher</string>
    <string name="liste_vide_participants_potentiels">Aucuns participants potentiels à afficher</string>
    
    <string name="aide_main">Vous pouvez ici créer, modifier ou supprimer un parcours</string>
    <string name="aide_ajouter_participant">Il y a ici des offres correspondant à votre recherche</string>
    <string name="aide_creation_parcours">Vous pouvez choisir le type de parcours à offrir en appuyant sur le bouton Passager / Conducteur</string>
    <string name="aide_modifier_compte">Vous pouvez ici modifier votre nom, prénom, numéro de téléphone et mot de passe</string>
    <string name="aide_parcours_detail">Vous pouvez ici consulter les détails du parcours, 
        les participants de ce parcours et une carte montrant les points de départ et de 
        destination de tous les participants</string>
    <string name="aide_profil_utilisateur">Vous pouvez laisser des commentaires sur un profil et votez sur la pertinence des autres commentaires</string>
</resources>
