<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.francisouellet.covoiturageexpress.CreationParcoursActivity" >
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical" >
    
	    <Switch 
	        android:layout_width="wrap_content"
	        android:layout_height="50dp"
	        android:textOn="@string/lbl_conducteur"
	        android:textOff="@string/lbl_passager"
	        android:checked="false"
	        android:layout_gravity="center"
	        android:thumb="@drawable/apptheme_switch_inner_holo_light"
	        android:id="@+id/creation_parcours_type_parcours" />
	    
	    <EditText 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/lbl_adresse_depart"
	        android:id="@+id/creation_parcours_adresse_depart"
	        android:inputType="textPostalAddress" />
	    
	    <EditText 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/lbl_adresse_destination"
	        android:id="@+id/creation_parcours_adresse_destination"
	        android:inputType="textPostalAddress" />
	    
	    <EditText 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/lbl_distance_supp"
	        android:id="@+id/creation_parcours_distance_supp"
	        android:inputType="numberDecimal" />
	    
	    <EditText 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/lbl_nb_places_disponibles"
	        android:id="@+id/creation_parcours_nb_places"
	        android:inputType="number" />
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:paddingTop="15dp"
	        android:paddingBottom="15dp" >
	        
	        <TextView 
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/lbl_date_depart"
	            android:id="@+id/creation_parcours_date_depart"
	            android:clickable="true"
	            android:onClick="clickDate" />
				            
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/lbl_heure_depart"
	            android:id="@+id/creation_parcours_heure_depart"
	            android:clickable="true"
	            android:onClick="clickHeure" />
	        
	    </LinearLayout>
	    
	    <CheckBox
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/creation_parcours_repeter"
	        android:text="@string/lbl_repeter"
	        android:enabled="false"
	        android:onClick="clickRepeter" />
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:paddingTop="20dp"
	        android:paddingBottom="20dp"
	        android:paddingRight="@dimen/activity_horizontal_margin"
	        android:visibility="gone"
	        android:id="@+id/creation_parcours_repetitions" >
	        
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/lbl_rep_dimanche"
	            android:id="@+id/creation_parcours_rep_dimanche"
	            android:clickable="true"
	            android:onClick="clickJourRepetition" />
	        
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/lbl_rep_lundi"
	            android:id="@+id/creation_parcours_rep_lundi"
	            android:clickable="true"
	            android:onClick="clickJourRepetition" />
	        
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/lbl_rep_mardi"
	            android:id="@+id/creation_parcours_rep_mardi"
	            android:clickable="true"
	            android:onClick="clickJourRepetition" />
	        
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/lbl_rep_mercredi"
	            android:id="@+id/creation_parcours_rep_mercredi"
	            android:clickable="true"
	            android:onClick="clickJourRepetition" />
	        
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/lbl_rep_jeudi"
	            android:id="@+id/creation_parcours_rep_jeudi"
	            android:clickable="true"
	            android:onClick="clickJourRepetition" />
	        
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/lbl_rep_vendredi"
	            android:id="@+id/creation_parcours_rep_vendredi"
	            android:clickable="true"
	            android:onClick="clickJourRepetition" />
	        
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/lbl_rep_samedi"
	            android:id="@+id/creation_parcours_rep_samedi"
	            android:clickable="true"
	            android:onClick="clickJourRepetition" />
	        
	    </LinearLayout>
	    
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/lbl_notes"
	        android:id="@+id/creation_parcours_notes"
	        android:inputType="textMultiLine" />
	
	</LinearLayout>

</ScrollView>
