<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.francisouellet.covoiturageexpress.ModifierCompteActivity" >

    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/lbl_prenom"
	        android:inputType="textCapWords"
	        android:id="@+id/modifier_compte_prenom" />
    
    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/lbl_nom"
	        android:inputType="textCapWords"
	        android:id="@+id/modifier_compte_nom" />
    
    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/lbl_no_de_telephone"
	        android:inputType="phone"
	        android:id="@+id/modifier_compte_telephone" />
    
    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/lbl_mot_de_passe"
	        android:inputType="textPassword"
	        android:id="@+id/modifier_compte_mot_de_passe" />
    
	<EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/lbl_confirmer_le_mot_de_passe"
	        android:inputType="textPassword"
	        android:id="@+id/modifier_compte_confirmer_mot_de_passe" />    
    
</LinearLayout>
