<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.francisouellet.covoiturageexpress.ConnexionActivity" >
	
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >
    
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/lbl_courriel"
	        android:inputType="textEmailAddress"
	        android:id="@+id/connexion_courriel" />
	    
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/lbl_mot_de_passe"
	        android:inputType="textPassword"
	        android:id="@+id/connexion_mot_de_passe" />
	    
	    <Button
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/lbl_connexion"
	        android:onClick="" />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingBottom="10dp"
	        android:text="@string/lbl_creer_un_compte"
	        android:onClick="creerCompte" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lbl_mot_de_passe_oublie"
	        android:enabled="false"
	        android:onClick="" />
	    
	</LinearLayout>
	
</RelativeLayout>
